--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,133 @@
-.App {
+/* app.css */
+
+body {
+  /* This should be set in the useEffect hook in App.js */
+}
+/* Header styles */
+.header-section {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./BGImage.jpg') center/cover fixed no-repeat;
+  min-height: 100vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-title {
+  font-family: 'Oswald', sans-serif;
+  font-size: 5vw; /* Adjusted for responsiveness */
+  color: white;
+  margin: 0; /* Remove default margin */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header-subtitle {
+  font-size: 3vh; /* Adjusted for responsiveness */
+  padding-bottom: 20px;
   color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Responsive adjustments */
+@media (max-width: 600px) {
+  .header-title {
+    font-size: 8vw; /* Larger size for better readability on small screens */
   }
-  to {
-    transform: rotate(360deg);
+
+  .header-subtitle {
+    font-size: 5vh; /* Larger size for better readability on small screens */
+  }
+
+  .header-section {
+    padding: 1rem; /* Reduce padding on small screens */
   }
 }
 
-.test {
+/* Search Section */
+.search-section {
+  padding: 1rem;
+}
 
-  color:#f5c802a1
+/* Products Section */
+.products-section {
+  background-color: white;
+  padding: 0 8%;
+  margin: auto;
+  min-height: 60vh;
+}
+
+.products-container {
+  padding: 2rem 0;
+  border-radius: 20px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  /* This will create a flexible grid with a minimum column size of 300px */
+  gap: 1rem;
+  /* Adjust the space between cards */
+  margin: 0 auto;
+  /* Center the grid */
+}
+
+
+.card {
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.4);
+  transition: transform 0.3s ease-in-out;
+  border-radius: 20px;
+  overflow: hidden;
+  width: 100%; /* make card width responsive */
+  max-width: 300px; /* set max card width */
+  height: auto;
+  margin: 0 auto;
+}
+
+
+.card .relative {
+  /* This targets the div that wraps the CardMedia */
+  border-radius: 20px 20px 20px 20px;
+  /* Top corners rounded */
+  overflow: hidden;
+  /* Ensures the image respects the border-radius */
+  height: 250px;
+}
+
+.card .MuiCardMedia-root {
+  object-fit: cover;
+  width: 100%;
+  /* Take full width of the container */
+  height: 250px;
+  /* Fixed height for all images */
+  object-position: center;
+  /* Center the image within the element's box */
+  border-radius: 20px 20px 0 0;
+  /* Rounded corners for top */
+}
+
+.card .MuiCardContent-root {
+  /* This targets the CardContent component */
+  border-radius: 20px 20px 20px 20px;
+  /* Bottom corners rounded */
+
+}
+
+/* Regular button style */
+.card .button-class {
+  padding: 10px 24px; /* Larger padding on larger screens */
+  font-size: 1rem; /* Regular font size */
+  margin-top: 20px; /* Adjusted space above the button for small screens */
+  /* ... other styles ... */
+}
+
+/* Smaller button style for screens smaller than 600px */
+@media (max-width: 600px) {
+  .card .button-class {
+    padding: 4px 8px; /* Even smaller padding on small screens */
+    font-size: 0.7rem; /* Even smaller font size */
+    margin-top: 20px; /* Adjusted space above the button for small screens */
+    /* ... adjust other properties as needed ... */
+  }
 }
