--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,25 @@ body {
 }
 /* Header styles */
 .header-section {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('./BGImage.jpg') center/cover fixed no-repeat;
+  background: url('./BGImage.jpg') center/cover no-repeat;
   min-height: 100vh;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  cursor: none; /* This hides the cursor */
+  
+}
+
+.revealing-overlay {
+  content: '';
+  position: absolute;
+  background: url('./BGimage2.jpg') center/cover no-repeat;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: background 0.5s;
+  mask-image: radial-gradient(circle, black 100px, transparent 100px);
+  mask-repeat: no-repeat;
+  mask-size: 200px 200px;
+  pointer-events: none;
 }
 
 .header-title {
@@ -20,13 +32,27 @@ body {
   color: white;
   margin: 0; /* Remove default margin */
   text-align: center;
+  z-index: 10000;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) 
 }
 
 .header-subtitle {
   font-size: 3vh; /* Adjusted for responsiveness */
   padding-bottom: 20px;
+  padding-top: 250px;
   color: white;
   text-align: center;
+  z-index: 9999;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%) 
 }
 
 /* Responsive adjustments */
@@ -130,4 +156,8 @@ body {
     margin-top: 20px; /* Adjusted space above the button for small screens */
     /* ... adjust other properties as needed ... */
   }
+}
+
+.section-title-style {
+  font-size: 48px;
 }
