--- a/src/DesignsPage.css
+++ b/src/DesignsPage.css
@@ -7,6 +7,13 @@
   @apply relative w-full min-h-screen overflow-auto flex justify-center items-center ; /* mt-24 might need to be adjusted to match your navbar's height */
 }
 
+.designs-page .image-container {
+  transform: rotate(0deg); /* Reset any rotation */
+  padding: 0; /* Reset padding */
+  /* Other styles */
+}
+
+
 
 /* Responsive grid layout and padding */
 .overlay {
